; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_beep.c_snd_hda_detach_beep_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_beep.c_snd_hda_detach_beep_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_codec = type { %struct.hda_beep* }
%struct.hda_beep = type { i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @snd_hda_detach_beep_device(%struct.hda_codec* %0) #0 {
  %2 = alloca %struct.hda_codec*, align 8
  %3 = alloca %struct.hda_beep*, align 8
  store %struct.hda_codec* %0, %struct.hda_codec** %2, align 8
  %4 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %5 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %4, i32 0, i32 0
  %6 = load %struct.hda_beep*, %struct.hda_beep** %5, align 8
  store %struct.hda_beep* %6, %struct.hda_beep** %3, align 8
  %7 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %8 = icmp ne %struct.hda_beep* %7, null
  br i1 %8, label %9, label %28

9:                                                ; preds = %1
  %10 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %11 = getelementptr inbounds %struct.hda_beep, %struct.hda_beep* %10, i32 0, i32 2
  %12 = call i32 @cancel_work_sync(i32* %11)
  %13 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %14 = getelementptr inbounds %struct.hda_beep, %struct.hda_beep* %13, i32 0, i32 1
  %15 = call i32 @cancel_delayed_work(i32* %14)
  %16 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %17 = getelementptr inbounds %struct.hda_beep, %struct.hda_beep* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %9
  %21 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %22 = call i32 @snd_hda_do_detach(%struct.hda_beep* %21)
  br label %23

23:                                               ; preds = %20, %9
  %24 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %25 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %24, i32 0, i32 0
  store %struct.hda_beep* null, %struct.hda_beep** %25, align 8
  %26 = load %struct.hda_beep*, %struct.hda_beep** %3, align 8
  %27 = call i32 @kfree(%struct.hda_beep* %26)
  br label %28

28:                                               ; preds = %23, %1
  ret void
}

declare dso_local i32 @cancel_work_sync(i32*) #1

declare dso_local i32 @cancel_delayed_work(i32*) #1

declare dso_local i32 @snd_hda_do_detach(%struct.hda_beep*) #1

declare dso_local i32 @kfree(%struct.hda_beep*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
